Updated YAML and General Information.

--- a/index.html
+++ b/index.html
@@ -1,35 +1,19 @@
 ---
 layout: bootcamp
 root: .
-venue: Euphoric State University
-address: 123 College Street, Euphoria
+venue: University of Chicago
+address: Day 1 - Biological Scienes Learning Center (BSLC) 109; Day 2 - Gordon Center for Integrative Science (GCIS) W301
 country: United-States
-humandate: Feb 17-18, 2020
-humantime: 9:00 am - 4:30 pm
-startdate: 2020-06-17
-enddate: 2020-06-18
+humandate: Sep 18-19, 2014
+humantime: 8:30 am - 4:30 pm
+startdate: 2014-09-18
+enddate: 2014-09-19
 latlng: 41.7901128,-87.6007318
 registration: restricted
-instructor: ["Grace Hopper", "Alan Turing"]
-helper: ["John von Neumann"]
-contact: admin@software-carpentry.org
+instructor: ["Will Trimble", "Dan Braithwaite", "John Blischak", "Emily Davenport"]
+helper: ["Kyler Brown"]
+contact: jdblischak@uchicago.edu
 ---
-<!--
-    Edit the values in the parameter block above to be appropriate for your bootcamp.
-    Please use three-letter month names for the 'humandate' field.
--->
-
-<!-- Remove the block below. -->
-<div align="center">
-  <p><strong><em>
-      This page is a template for bootcamp home pages.
-      <br/>
-      Please see
-      <a href="//github.com/swcarpentry/bc">github.com/swcarpentry/bc</a>
-      for instructions on how to create
-      a repository for your bootcamp.
-  </em></strong></p>
-</div>
 
 <!--
     This block includes the Eventbrite registration widget if 'eventbrite' has been set in the header.
@@ -50,19 +34,14 @@ contact: admin@software-carpentry.org
   and to apply what they have learned to their own research problems.
 </p>
 
-<!--
-    Modify this block to reflect the target audience for your bootcamp.
-    In particular, if it is only open to people from a particular institution,
-    or if specialized prerequisite knowledge is required, please mention that.
--->
 <p>
   <strong>Who:</strong>
-  The course is aimed at graduate students and other researchers.
+  The main audience of this course is graduate students that are entering their
+  first year in the Biological Sciences Division (BSD) at the University of
+  Chicago. Any remaining spots will be made available to other researchers in
+  the BSD.
 </p>
 
-<!--
-    This block displays the address and links to a map showing directions.
--->
 {% if page.latlng %}
 <p>
   <strong>Where:</strong>
@@ -74,19 +53,12 @@ contact: admin@software-carpentry.org
 </p>
 {% endif %}
 
-<!--
-    Modify the block below if there are any special requirements.
--->
 <p>
   <strong>Requirements:</strong>
   Participants must bring a laptop with a few specific software packages installed
   (listed below).
 </p>
 
-<!--
-    This block automatically inserts a contact email address if one has been specified for the page.
-    If one hasn't, this block inserts the generic contact address for Software Carpentry.
--->
 <p>
   <strong>Contact</strong>:
   Please mail
