--- a/index.html
+++ b/index.html
@@ -81,23 +81,25 @@ contact: jdblischak@uchicago.edu
   <div class="span6">
     <h3>Day 1</h3>
     <table class="table table-striped">
-      <tr> <td>09:00</td> <td>Automating tasks with the Unix shell</td> </tr>
-      <tr> <td><em>10:30</em></td> <td><em>Coffee break</em></td> </tr>
-      <tr> <td>12:00</td> <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td> <td>Building programs with Python</td> </tr>
-      <tr> <td><em>14:30</em></td> <td><em>Coffee break</em></td> </tr>
-      <tr> <td>16:00</td> <td>Wrap-up</td> </tr>
+      <tr> <td>08:30</td> <td>Introduction</td> <td> </td> </tr>
+      <tr> <td>09:00</td> <td>Automating tasks with the Unix shell</td> <td>Will Trimble</td> </tr>
+      <tr> <td><em>10:30</em></td> <td><em>Coffee break</em></td> <td> </td> </tr>
+      <tr> <td>12:00</td> <td>Lunch break</td> <td> </td> </tr>
+      <tr> <td>13:00</td> <td>Building programs with R</td> <td>Dan Braithwaite</td> </tr>
+      <tr> <td><em>14:30</em></td> <td><em>Coffee break</em></td> <td> </td> </tr>
+      <tr> <td>16:00</td> <td>Wrap-up</td> <td> </td> </tr>
     </table>
   </div>
   <div class="span6">
     <h3>Day 2</h3>
     <table class="table table-striped">
-      <tr> <td>09:00</td> <td>Version control with Git</td> </tr>
-      <tr> <td><em>10:30</em></td> <td><em>Coffee break</em></td> </tr>
-      <tr> <td>12:00</td> <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td> <td>Managing data with SQL</td> </tr>
-      <tr> <td><em>14:30</em></td> <td><em>Coffee break</em></td> </tr>
-      <tr> <td>16:00</td> <td>Wrap-up</td> </tr>
+      <tr> <td>08:30</td> <td>Review of Day 1</td> <td> </td> </tr>
+      <tr> <td>09:00</td> <td>Building programs with R - cont</td> <td>John Blischak</td> </tr>
+      <tr> <td><em>10:30</em></td> <td><em>Coffee break</em></td> <td> </td> </tr>
+      <tr> <td>12:00</td> <td>Lunch break</td> <td> </td> </tr>
+      <tr> <td>13:00</td> <td>Version control with Git</td> <td>Emily Davenport</td> </tr>
+      <tr> <td><em>14:30</em></td> <td><em>Coffee break</em></td> <td> </td> </tr>
+      <tr> <td>16:00</td> <td>Wrap-up</td> <td> </td> </tr>
     </table>
   </div>
 </div>
