--- a/index.html
+++ b/index.html
@@ -72,9 +72,6 @@ contact: jdblischak@uchicago.edu
 
 <hr/>
 
-<!--
-    Edit this block to show the schedule for your bootcamp.
--->
 <h2>Schedule</h2>
 
 <div class="row-fluid">
@@ -106,9 +103,6 @@ contact: jdblischak@uchicago.edu
 
 <hr/>
 
-<!--
-    Edit this block to show what topics will be covered.
--->
 <h2>Syllabus</h2>
 
 <div class="row-fluid">
@@ -125,7 +119,7 @@ contact: jdblischak@uchicago.edu
     </ul>
   </div>
   <div class="span6">
-    <h3>Programming in Python</h3>
+    <h3>Programming in R</h3>
     <ul>
       <li>Using libraries</li>
       <li>Working with arrays</li>
@@ -133,8 +127,7 @@ contact: jdblischak@uchicago.edu
       <li>Creating and using functions</li>
       <li>Loops and conditionals: <code>for</code>, <code>if</code>, <code>else</code>, ...</li>
       <li>Defensive programming</li>
-      <li>Using Python from the command line</li>
-      <li><a href="novice/ref/03-python.html">Reference...</a></li>
+      <li>Using R from the command line</li>
     </ul>
   </div>
 </div>
@@ -152,20 +145,6 @@ contact: jdblischak@uchicago.edu
       <li>Open licenses</li>
       <li>Where to host work, and why</li>
       <li><a href="novice/ref/02-git.html">Reference...</a></li>
-    </ul>
-  </div>
-  <div class="span6">
-    <h3>Managing Data with SQL</h3>
-    <ul>
-      <li>Reading and sorting data</li>
-      <li>Filtering with <code>where</code></li>
-      <li>Calculating new values on the fly</li>
-      <li>Handling missing values</li>
-      <li>Combining values using aggregation</li>
-      <li>Combining information from multiple tables using <code>join</code></li>
-      <li>Creating, modifying, and deleting data</li>
-      <li>Programming with databases</li>
-      <li><a href="novice/ref/04-sql.html">Reference...</a></li>
     </ul>
   </div>
 </div>
