Added link to pre-bootcamp survey.

--- a/index.html
+++ b/index.html
@@ -103,6 +103,17 @@ contact: jdblischak@uchicago.edu
 
 <hr/>
 
+<h2>Pre-bootcamp survey</h2>
+
+<p>
+  After registering, please complete
+  the <a href="https://docs.google.com/forms/d/1F3sWEKkQNUcrphT6di6SlrFG6_B7cdoKkguH1t-V0qw/viewform?usp=send_form">pre-bootcamp
+  survey</a>. It will only take a few minutes. We need this informatoin to help us
+  prepare the bootcamp as well as assess the efficacy of our teaching. Also, do
+  not worry about survey questions on topics that we are not covering. These are
+  included because we use the same standard survey for all bootcamps.
+</p>
+
 <h2>Syllabus</h2>
 
 <div class="row-fluid">
