Added Eventbrite eid.

--- a/index.html
+++ b/index.html
@@ -13,11 +13,9 @@ registration: restricted
 instructor: ["Will Trimble", "Dan Braithwaite", "John Blischak", "Emily Davenport"]
 helper: ["Kyler Brown"]
 contact: jdblischak@uchicago.edu
+eventbrite: 12387464239
 ---
 
-<!--
-    This block includes the Eventbrite registration widget if 'eventbrite' has been set in the header.
--->
 {% if page.eventbrite %}
 <iframe src="//www.eventbrite.com/tickets-external?eid={{page.eventbrite}}&ref=etckt" frameborder="0" width="100%" scrolling="auto"></iframe>
 {% endif %}
