Added info on food and funding sources.

--- a/index.html
+++ b/index.html
@@ -33,6 +33,15 @@ eventbrite: 12387464239
 </p>
 
 <p>
+  Complentary lunch and coffee will be provided both days. This course
+  is supported in part by
+  the <a href="http://genes.uchicago.edu/">Department of Human
+  Genetics</a> and the
+  <a href="http://gradprograms.bsd.uchicago.edu/">Biological Sciences
+  Division Office of Graduate and Postdoctoral Affairs</a>.
+</p>
+
+<p>
   <strong>Who:</strong>
   The main audience of this course is graduate students that are entering their
   first year in the Biological Sciences Division (BSD) at the University of
