Kyler cannot help because of conflicting obligation.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ enddate: 2014-09-19
 latlng: 41.7901128,-87.6007318
 registration: restricted
 instructor: ["Will Trimble", "Dan Braithwaite", "John Blischak", "Emily Davenport"]
-helper: ["Kyler Brown", "Sarah Urbut", "Daniel Rabe"]
+helper: ["Sarah Urbut", "Daniel Rabe"]
 contact: jdblischak@uchicago.edu
 eventbrite: 12387464239
 ---
