Removed Eventbrite widget.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ registration: restricted
 instructor: ["Will Trimble", "Dan Braithwaite", "John Blischak", "Emily Davenport"]
 helper: ["Sarah Urbut", "Daniel Rabe"]
 contact: jdblischak@uchicago.edu
-eventbrite: 12387464239
+#eventbrite: 12387464239
 ---
 
 {% if page.eventbrite %}
