--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ startdate: 2014-09-18
 enddate: 2014-09-19
 latlng: 41.7901128,-87.6007318
 registration: restricted
-instructor: ["Will Trimble", "Dan Braithwaite", "John Blischak", "Emily Davenport"]
+instructor: ["Will Trimble", "Emily Davenport", "Dan Braithwaite", "John Blischak"]
 helper: ["Sarah Urbut", "Daniel Rabe"]
 contact: jdblischak@uchicago.edu
 #eventbrite: 12387464239
