--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ contact: jdblischak@uchicago.edu
 </p>
 
 <p>
-  Complentary lunch and coffee will be provided both days. This course
+  Complimentary lunch and coffee will be provided both days. This course
   is supported in part by
   the <a href="http://genes.uchicago.edu/">Department of Human
   Genetics</a> and the
