Update topics covered in R section.

--- a/index.html
+++ b/index.html
@@ -139,12 +139,10 @@ contact: jdblischak@uchicago.edu
   <div class="span6">
     <h3>Programming in R</h3>
     <ul>
-      <li>Using libraries</li>
-      <li>Working with arrays</li>
+      <li>Working with vectors and data frames</li>
       <li>Reading and plotting data</li>
       <li>Creating and using functions</li>
       <li>Loops and conditionals: <code>for</code>, <code>if</code>, <code>else</code>, ...</li>
-      <li>Defensive programming</li>
       <li>Using R from the command line</li>
     </ul>
   </div>
