Added links to R reference sheet on main index page and also R index page.

--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@ contact: jdblischak@uchicago.edu
       <li>Creating and using functions</li>
       <li>Loops and conditionals: <code>for</code>, <code>if</code>, <code>else</code>, ...</li>
       <li>Using R from the command line</li>
+      <li><a href="novice/ref/03-r.html">Reference...</a></li>
     </ul>
   </div>
 </div>
