Added link to Etherpad.

--- a/index.html
+++ b/index.html
@@ -121,6 +121,14 @@ contact: jdblischak@uchicago.edu
   included because we use the same standard survey for all bootcamps.
 </p>
 
+<h2>Hang out on the Etherpad</h2>
+
+<p>
+  Join the
+   <a href="https://etherpad.mozilla.org/2014-09-18-chicago">Etherpad</a>
+   to ask questions and find uesful information during the lessons.
+</p>
+
 <h2>Syllabus</h2>
 
 <div class="row-fluid">
