--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ enddate: 2014-09-19
 latlng: 41.7901128,-87.6007318
 registration: restricted
 instructor: ["Will Trimble", "Emily Davenport", "Dan Braithwaite", "John Blischak"]
-helper: ["Daniel Rabe", "Nick Knoblauch", "Suchandra Thapa"]
+helper: ["Daniel Rabe", "Nick Knoblauch", "Suchandra Thapa", "Bala Desinghu"]
 contact: jdblischak@uchicago.edu
 #eventbrite: 12387464239
 ---
