Added faculty advisors and Candice.

--- a/index.html
+++ b/index.html
@@ -77,6 +77,18 @@ contact: jdblischak@uchicago.edu
   for more information.
 </p>
 
+<p>
+  <strong>Faculty advisors:</strong>
+  Allan Drummond, Matthew Stephens, Mark Abney 
+</p>
+
+<p>
+  <strong>Logistics support:</strong>
+  Candice Lewis 
+</p>
+
+
+
 <hr/>
 
 <h2>Schedule</h2>
