Closed post-bootcamp survey.

--- a/index.html
+++ b/index.html
@@ -122,12 +122,11 @@ contact: jdblischak@uchicago.edu
 
 <hr/>
 
-<h2>Post-bootcamp survey</h2>
+<h2>Post-bootcamp survey (closed)</h2>
 
 <p>
-  Before you leave for the day, please complete
-  the <a href="https://docs.google.com/forms/d/1tA-S0Huh_L87hu96OQKAhZ0eFocw2ZCO6tB2P-hI1X4/viewform">post-bootcamp
-  survey</a>. It should only take a few minutes. We really appreciate it!
+  Before you leave for the day, please complete the post-bootcamp survey. It
+  should only take a few minutes. We really appreciate it!
 </p>
 
 <h2>Pre-bootcamp survey (closed)</h2>
