Update index.html: typo fixes
Fix typos: Sciences > Sciences, uesful > useful.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: bootcamp
 root: .
 venue: University of Chicago
-address: Day 1 - Biological Scienes Learning Center (BSLC) 109; Day 2 - Gordon Center for Integrative Science (GCIS) W301
+address: Day 1 - Biological Sciences Learning Center (BSLC) 109; Day 2 - Gordon Center for Integrative Science (GCIS) W301
 country: United-States
 humandate: Sep 18-19, 2014
 humantime: 8:30 am - 4:30 pm
@@ -144,7 +144,7 @@ contact: jdblischak@uchicago.edu
 <p>
   Join the
    <a href="https://etherpad.mozilla.org/2014-09-18-chicago">Etherpad</a>
-   to ask questions and find uesful information during the lessons.
+   to ask questions and find useful information during the lessons.
 </p>
 
 <h2>Syllabus</h2>
